FIX: add styles.css
- add styles.css
- split index and days formatting into separate classes

--- a/day-3.html
+++ b/day-3.html
@@ -3,97 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Exercise Sections</title>
-<style>
-  body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    text-transform: uppercase;
-  }
-
-  .title-section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #000000; /* Black background color for the title section */
-    color: #fff; /* White text color */
-    padding: 20px;
-  }
-
-  .title {
-    font-size: 24px;
-    font-weight: bold;
-    flex: 0 0 60%; /* Title takes up 60% */
-    text-align: center;
-  }
-
-  .subtitle {
-    font-size: 18px;
-    flex: 0 0 40%; /* Subtitle takes up 40% */
-    text-align: center;
-  }
-
-  .exercise-section {
-    display: flex;
-    align-items: stretch; /* Make both sections the same height */
-    border-bottom: 2px solid #fff; /* Add a border between sections */
-    padding: 0; /* Remove padding */
-    text-align: center;
-    margin-bottom: -2px; /* Remove space between exercise sections */
-  }
-
-  .exercise-info {
-    text-align: center;
-    padding: 20px;
-    box-sizing: border-box; /* Include padding in width calculation */
-  }
-
-  .exercise-info-odd {
-    background-color: #ff0000; /* Red background color for odd sections */
-    flex: 0 0 60%; /* Left section takes up 60% */
-    color: #fff; /* White text color */
-  }
-
-  .exercise-info-even {
-    background-color: #000000; /* Black background color for even sections */
-    flex: 0 0 60%; /* Left section takes up 60% */
-    color: #fff; /* White text color */
-  }
-
-  .exercise-name {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 10px;
-    color: yellow; /* Yellow hyperlink color */
-    text-decoration: none; /* Remove underline from hyperlinks */
-  }
-
-  .sets-reps {
-    font-size: 18px;
-    margin-bottom: 10px;
-  }
-
-  .exercise-pic {
-    flex: 0 0 40%; /* Right section takes up 40% */
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden; /* Ensure that content does not overflow */
-  }
-
-  .youtube-thumbnail {
-    width: 100%; /* Ensure the thumbnail occupies the entire space */
-    height: 100%; /* Ensure the thumbnail occupies the entire space */
-    background-size: cover;
-    background-position: center;
-    border-radius: 5px;
-    display: block; /* Ensure the anchor tag occupies the entire space */
-  }
-</style>
+<title>Day 3 - Full Body Circuit</title>
+<link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="days-page">
 
 <div class="title-section">
   <div class="title">Day 3</div>
