--- a/index.html
+++ b/index.html
@@ -4,54 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Exercise Plan</title>
-<style>
-  body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-  }
-
-  .title-section {
-    background-color: #000000;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-  }
-
-  .title {
-    font-size: 24px;
-    font-weight: bold;
-  }
-
-  .subtitle {
-    font-size: 18px;
-  }
-
-  .exercise-section {
-    background-color: #f0f0f0;
-    padding: 20px;
-    margin: 20px 0;
-  }
-
-  .exercise-name {
-    font-size: 20px;
-    font-weight: bold;
-    color: #333;
-    text-decoration: none;
-  }
-
-  .sets-reps {
-    font-size: 16px;
-    color: #666;
-    margin-left: 20px;
-  }
-
-  .exercise-section:nth-child(odd) {
-    background-color: #e6e6e6;
-  }
-</style>
+<link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="index-page">
 
 <div class="title-section">
   <div class="title">Exercise Plan</div>
@@ -76,6 +31,7 @@
   <p class="sets-reps">Cable Woodchoppers - 3 sets x 12 reps each side</p>
   <p class="sets-reps">Plank with Leg Lifts - 3 sets x 12 reps each leg</p>
   <p class="sets-reps">Russian Twists with Medicine Ball - 3 sets x 15 reps each side</p>
+  <p class="sets-reps">Lat Pulldown - 3 sets x 10 reps</p>
 </div>
 
 <div class="exercise-section">
